# teknofest-2026-SORP

./: CMakeLists.txt  README.md  package.xml
launch/: simulasyon.launch.py
scripts/: cizgi_takip.py
scripts/install/: local_setup.sh  setup.sh
scripts/log/: latest_build
urdf/: forklift.urdf
